# TaxWizard

./: .replit  app.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  tax_calculator.py  utils.py
instance/: tax_assistant.db
static/css/: custom.css
static/js/: charts.js  dashboard.js  theme_switcher.js
templates/: dashboard.html  data_collection.html  file_upload.html  index.html  layout.html  tax_advice.html  tax_optimization.html
